--- a/quartus/de10nano_top.qsf
+++ b/quartus/de10nano_top.qsf
@@ -269,6 +269,11 @@ set_location_assignment PIN_W20 -to sw[3]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
+set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Timer1Sec.vhd"
 set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/one_pulse.vhd"
 set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/debouncer.vhd"
 set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/async_conditioner.vhd"
@@ -284,8 +289,4 @@ set_global_assignment -name VHDL_FILE "../hdl/led-patterns/led-patterns.vhd"
 set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Clockgen.vhd"
 set_global_assignment -name VHDL_FILE de10nano_top.vhd
 set_global_assignment -name SDC_FILE de10nano.sdc
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
-set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
