--- a/quartus/de10nano_top.qsf
+++ b/quartus/de10nano_top.qsf
@@ -273,25 +273,8 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Timer1Sec.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/one_pulse.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/debouncer.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/async_conditioner.vhd"
-set_global_assignment -name VHDL_FILE ../hdl/synchronizer/synchronizer.vhd
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Srcchooser.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen4.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen3.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen2.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen1.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen0.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patchooser.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/led-patterns.vhd"
-set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Clockgen.vhd"
-set_global_assignment -name VHDL_FILE de10nano_top.vhd
-set_global_assignment -name SDC_FILE de10nano.sdc
 set_global_assignment -name ENABLE_SIGNALTAP ON
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/stp1.stp
-set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
 set_global_assignment -name SLD_NODE_CREATOR_ID 110 -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_ENTITY_NAME sld_signaltap -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_clk -to "led_patterns:LEDPATTERNMAN|base_clock_eighth~direct" -section_id auto_signaltap_0
@@ -970,3 +953,22 @@ set_instance_assignment -name ENABLE_BENEFICIAL_SKEW_OPTIMIZATION_FOR_NON_GLOBAL
 set_instance_assignment -name PLL_COMPENSATION_MODE DIRECT -to u0|hps_0|hps_io|border|hps_sdram_inst|pll0|fbout
 set_global_assignment -name SLD_FILE db/stp1_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/led_patterns_avalon.vhd"
+set_global_assignment -name QIP_FILE soc_system/synthesis/soc_system.qip
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Timer1Sec.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/one_pulse.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/debouncer.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/async-conditioner/async_conditioner.vhd"
+set_global_assignment -name VHDL_FILE ../hdl/synchronizer/synchronizer.vhd
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Srcchooser.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen4.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen3.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen2.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen1.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patgen0.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Patchooser.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/led-patterns.vhd"
+set_global_assignment -name VHDL_FILE "../hdl/led-patterns/Clockgen.vhd"
+set_global_assignment -name VHDL_FILE de10nano_top.vhd
+set_global_assignment -name SDC_FILE de10nano.sdc
+set_global_assignment -name SIGNALTAP_FILE output_files/stp1.stp
