HW 8 - Finally get the cross compiler working

--- a/linux/hello-world/Makefile
+++ b/linux/hello-world/Makefile
@@ -5,10 +5,11 @@ obj-m := Hello_world.o
 else
 # normal makefile
 # path to kernel dir
-KDIR ?= ../../linux-socfpga
+KDIR := ../../linux-socfpga
+PWD := $(shell pwd)
 
 default:
-	$(MAKE) -C $(KDIR) ARCH=arm CROSS_COMPILE=arm-linux-gnueabinhf- M=$$PWD
+	$(MAKE) -C $(KDIR) M=$$PWD modules
 	
 clean:
 	$(MAKE) -C $(KDIR) M=$$PWD clean
